# now_chirping

./: .gitignore
backend/: pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: auth.py  users.py
backend/app/db/: session.py
backend/app/models/: user.py
backend/app/services/: spotify.py  token_refresh.py
backend/tests/: conftest.py
backend/tests/api/: test_auth.py  test_users.py
frontend/: index.html
frontend/src/: App.css  App.tsx
frontend/src/api/: client.ts
frontend/src/components/: CurrentlyPlaying.tsx
frontend/src/pages/: DashboardPage.tsx  LoginPage.tsx
