[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "fastapi==0.137.1",
    "httpx2>=2.4.0",
    "pydantic-settings>=2.14.1",
    "pytest==9.1.0",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.17",
    "sqlmodel==0.0.38",
    "ty>=0.0.50",
    "uvicorn==0.49.0",
]
